--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
     <link rel="stylesheet" href="./styles/globalStyles.css">
     <link rel="stylesheet" href="./styles/buttons.css">
     <link rel="stylesheet" href="index.css">
+    <script src="./script/clickTest.js" defer></script>
     <title>Projeto 2 - Medicina Nuclear</title>
 </head>
 <body>
-    <div class="container">
-        <div class="wrapper">
-            <main>
-                <header> <h2>Lista de Exposição</h2></header>
-                <div class="buttons_box">
-                    <button type="button"><div><img src="./images/doctor.png" alt="doctorIcon"></div>Profissionais</button>
-                    <button type="button"><div><img src="./images/patient.png" alt="doctorIcon"></div>Pacientes</button>
-                    <button type="button"><div><img src="./images/anotacoes.png" alt="doctorIcon"></div>Leitura</button>
-                    <button type="button"><div><img src="./images/print (1).png" alt="doctorIcon"></div>Relatório de dose</button>
-                </div>
-            </main>
-        </div>
+    <div class="wrapper">
+        <main>
+            <header> <h2>Lista de Exposição</h2></header>
+            <div class="buttons_box">
+                <button type="button"><div><img src="./images/doctor.png" alt="doctorIcon"></div>Profissionais</button>
+                <button type="button"><div><img src="./images/patient.png" alt="doctorIcon"></div>Pacientes</button>
+                <button type="button"><div><img src="./images/anotacoes.png" alt="doctorIcon"></div>Leitura</button>
+                <button type="button"><div><img src="./images/print (1).png" alt="doctorIcon"></div>Relatório de dose</button>
+            </div>
+        </main>
     </div>
 </body>
 </html>
