--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/globalStyles.css">
     <link rel="stylesheet" href="./styles/buttons.css">
     <link rel="stylesheet" href="index.css">
-    <script src="./script/clickTest.js" defer></script>
+    <script src="/index.js" defer></script>
     <title>Projeto 2 - Medicina Nuclear</title>
 </head>
 <body>
