--- a/pages/Leitura/leitura.html
+++ b/pages/Leitura/leitura.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/globalStyles.css">
-    <link rel="stylesheet" href="../../styles/modal.css">
+    <link rel="stylesheet" href="../../styles/modalList.css">
     <link rel="stylesheet" href="../../styles/inputs.css">
     <link rel="stylesheet" href="../../styles/buttons.css">
     <link rel="stylesheet" href="./leitura.css">
-    <script src="../../script/clickTest.js" defer></script>
+    <script type="module" src="./leitura.js" defer></script>
     <title>Projeto 2 - Medicina Nuclear - Profissionais</title>
 </head>
 <body>
@@ -18,16 +18,16 @@
         <form id="profissionais" action="">
             <legend>Informe os dados para cadastro</legend>
             <fieldset class="regularDisplay">
-                <input class="inputName" type="text" name="name" id="name" required>
-                <label class="transitionLabel" for="name">Profissional</label>
+                <label class="transitionLabel selectedLabel" for="professional">Profissional</label>
+                <input class="inputsLeitura selectedInput" type="text" name="professional" id="professional" required readonly>
             </fieldset>
             <fieldset class="regularDisplay">
-                <input class="inputName" type="text" name="name" id="name" required>
-                <label class="transitionLabel" for="name">Paciente</label>
+                <label class="transitionLabel selectedLabel" for="patient">Paciente</label>
+                <input class="inputsLeitura selectedInput" type="text" name="patient" id="patient" required>
             </fieldset>
             <fieldset class="regularDisplay">
-                <input class="inputName" type="text" name="name" id="name" required>
-                <label class="transitionLabel" for="name">Evento</label>
+                <label class="transitionLabel selectedLabel" for="event">Evento</label>
+                <input class="inputsLeitura selectedInput" type="text" name="event" id="event" required>
             </fieldset>
             <fieldset class="diferentDisplay">
                 <div class="inputsRowBox">
@@ -53,13 +53,14 @@
             <button class="button_form" type="submit">Adicionar Paciente</button>
         </form>
     </div>
-    <dialog>
-            <div class="content">
-                <span style="cursor: pointer;">Débora</span>
-            </div>
-            <div class="closeModal">
-                <button class="button_modal">Cancelar</button>
-            </div>
+    <dialog class="modalList">
+        <ul class="contentModalList">
+            <!-- <li style="cursor: pointer;">Débora</li> -->
+        </ul>
+        <div class="closeModal">
+            <button class="button_modal">Cancelar</button>
+        </div>
     </dialog>
+
 </body>
 </html>
