fix: routes from homePage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <main>
             <header> <h2>Lista de Exposição</h2></header>
             <div class="buttons_box">
+                <a href="./pages/"></a>
                 <button type="button"><div><img src="./images/doctor.png" alt="doctorIcon"></div>Profissionais</button>
                 <button type="button"><div><img src="./images/patient.png" alt="doctorIcon"></div>Pacientes</button>
                 <button type="button"><div><img src="./images/anotacoes.png" alt="doctorIcon"></div>Leitura</button>
